# mcp-example

./: .gitignore  Dockerfile  README.md  client.py  compose.yml  model.py  pyproject.toml  server1.py  server2.py
.devcontainer/: compose-devcontainer.yml  devcontainer.json
